Basically completed project

--- a/views/home.html
+++ b/views/home.html
@@ -2,9 +2,10 @@
 
 {% block body %}
     <div class="section lead">
-      <div class="container">
+      <!--<div class="container">-->
+      <div>
         <div class="row">
-          <div class="col-lg-12 ">
+          <div class="jumbotron">
             <img src="http://placehold.it/1140x450" class="img-responsive">
           </div>
         </div><!-- row -->
@@ -14,19 +15,35 @@
     <div class="section">
 
       <div class="container">
+        <h1 class="panel-title">Welcome to Modern Business</h1>
 
         <div class="row">
           <div class="col-lg-4 ">
-            <h3><i class="fa fa-check-circle-o"></i> Bootstrap 3 Built</h3>
-            <p>The 'Modern Business' website template by <a href="http://startbootstrap.com">Start Bootstrap</a> is built with <a href="http://getbootstrap.com">Bootstrap 3</a>. Make sure you're up to date with latest Bootstrap documentation!</p>
+            <div class='panel-heading'>
+              <h3><i class="fa fa-check-circle-o"></i> Bootstrap 3 Built</h3>
+            </div>
+            <div class="panel-body">
+              <p>The 'Modern Business' website template by <a href="http://startbootstrap.com">Start Bootstrap</a> is built with <a href="http://getbootstrap.com">Bootstrap 3</a>. Make sure you're up to date with latest Bootstrap documentation!</p>
+              <button class='btn'>Learn More</button>
+            </div>
           </div>
           <div class="col-lg-4 ">
-            <h3><i class="fa fa-pencil"></i> Ready to Style &amp; Edit</h3>
-            <p>You're ready to go with this pre-built page structure, now all you need to do is add your own custom stylings! You can see some free themes over at <a href="http://bootswatch.com">Bootswatch</a>, or come up with your own using <a href="http://getbootstrap.com/customize/">the Bootstrap customizer</a>!</p>
+            <div class='panel-heading'>
+              <h3><i class="fa fa-pencil"></i> Ready to Style &amp; Edit</h3>
+            </div>
+            <div class="panel-body">
+              <p>You're ready to go with this pre-built page structure, now all you need to do is add your own custom stylings! You can see some free themes over at <a href="http://bootswatch.com">Bootswatch</a>, or come up with your own using <a href="http://getbootstrap.com/customize/">the Bootstrap customizer</a>!</p>
+              <button class='btn'>Learn More</button>
+            </div>
           </div>
           <div class="col-lg-4 ">
-            <h3><i class="fa fa-folder-open"></i> Many Page Options</h3>
-            <p>This template features many common pages that you might see on a business website. Pages include: about, contact, portfolio variations, blog, pricing, FAQ, 404, services, and general multi-purpose pages.</p>
+            <div class='panel-heading'>
+              <h3><i class="fa fa-folder-open"></i> Many Page Options</h3>
+            </div>
+            <div class="panel-body">
+              <p>This template features many common pages that you might see on a business website. Pages include: about, contact, portfolio variations, blog, pricing, FAQ, 404, services, and general multi-purpose pages.</p>
+              <button class='btn'>Learn More</button>
+            </div>
           </div>
         </div><!-- /.row -->
 
@@ -56,8 +73,7 @@
 
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2>Display Some Work on the Home Page Portfolio</h2>
-            <hr>
+            <h2 class="portfolio-title">Home Page Portfolio</h2>
           </div>
           <div class="col-lg-4  ">
             <a href="portfolio-item.html"><img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450"></a>
