--- a/views/layout.html
+++ b/views/layout.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
     <link href="/stylesheets/shoestring.css" rel="stylesheet">
 
   </head>
@@ -25,6 +26,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div>
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="/contact">Sweet</a></li>
+            <li><a href="/contact">Dude</a></li>
             <li><a href="/contact">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
