--- a/assets/stylesheets/shoestring.scss
+++ b/assets/stylesheets/shoestring.scss
@@ -1,7 +1,215 @@
 @import "normalize";
 @import "modern-business";
+$darkgrey: #1A1A1A;
+$lightergrey: #f5f5f5;
+
 body {
   h1 {
-    color: white;
+    color: grey;
   }
+}
+.navbar {
+	height: 50px;
+	margin-top: 0px;
+	width: 100%;
+	a {
+		text-decoration: none;
+		display: inline;
+		height: 100%;
+		font-size: 18px;
+		font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; /* new */
+	}
+}
+
+.navbar-inverse {
+	background: $darkgrey;
+	a {
+		color: gray;
+	}
+}
+.navbar-fixed-top {
+	position: fixed;
+	margin-top: -50px;
+}
+.navbar-header {
+	margin-top: 12px;
+}
+.navbar-brand {
+	float: left;
+}
+.nav {
+	margin-top: 0px; /* new */
+}
+.navbar-right {
+	float: right;
+	li {
+		display: inline-block;
+		a{
+			padding-left: 40px; /* new */
+		}
+	}
+}
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%; /* new */
+  clear: both;
+}
+.row {
+  clear: both;
+}
+.jumbotron {
+	margin-top: -50px; /* new */
+}
+.img-responsive {
+	width: 100%; /* new */
+	height: 300px;
+}
+.img-home-portfolio{
+	width: 100%; /* new */
+	height: 100%;
+	margin-bottom: -5px;
+}
+
+@function columns($columns){
+	@return floor(percentage($columns/12))
+}
+
+.col-lg-4 {
+  width: columns(3.5);
+  margin: 1.75%;
+  display: inline-block;
+  border: 1px solid lightgrey;
+  vertical-align: top;
+}
+.col-lg-6 {
+  width: columns(5.5);
+  margin: 1.75%;
+  display: inline-block;
+  vertical-align: top;
+}
+.col-sm-8 {
+  width: columns(7.5);
+  margin: 1.75%;
+  display: inline-block;
+  vertical-align: top;
+}
+.col-sm-4 {
+  width: columns(3.5);
+  margin: 1.75%;
+  display: inline-block;
+  vertical-align: top;
+}
+.col-lg-12 {
+  width: columns(11.5);
+  margin: 1.75%;
+  display: inline-block;
+  vertical-align: top;
+}
+.panel-heading {
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 1px;
+	background: $lightergrey;
+	border-bottom: 1px solid lightgrey;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	h3{
+		font-weight: 500;
+	}
+}
+.panel-body {
+	p{
+		padding: 5%;
+		font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+		font-size: 14px;
+		line-height: 1.4;
+		margin-top: 0px;
+	}
+}
+.panel-title {
+	width: 95%;
+	margin: 1.75%;
+	margin-top: -70px;
+	color: $darkgrey;
+	padding-bottom: 10px;
+	border-bottom: 1px solid lightgrey;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 36px;
+	font-weight: 500;
+	margin-bottom: 5px;
+}
+.btn {
+  border-radius: 4px;
+  font-family: Arial;
+  color: #2e2d2e;
+  font-size: 14px;
+  background: white;
+  padding: 8px;
+  border: solid lightgrey 1px;
+  text-decoration: none;
+  margin-left: 5%;
+  margin-bottom: 5%;
+}
+
+.btn:hover {
+  background: lightgrey;
+  border-color: grey;
+  text-decoration: none;
+}
+.portfolio-title {
+	width: 95%;
+	margin: 1.75%;
+	color: $darkgrey;
+	padding-bottom: 10px;
+	border-bottom: 1px solid $lightergrey;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 32px;
+	font-weight: 500;
+	margin-bottom: 5px;
+}
+.breadcrumb{
+	background: $lightergrey;
+	padding: 10px;
+	li {
+		display: inline;
+		a{
+			text-decoration: none;
+		}
+	}
+}
+.form-group{
+	border: none;
+	label {
+		line-height: 1.5;
+		font-weight: 700;
+	}
+	textarea {
+		width: 100%;
+	}
+	.btn{
+		margin-left: 0px;
+		background-color: #337eb7;
+		color: white;
+		border-color: #2e6da4;
+	}
+	.btn:hover {
+		background-color: #2e6da4;
+		border-color: #2e6da4;
+	}
+}
+.form-control {
+	border-radius: 3px;
+	box-shadow: 0px;
+	border: 1px solid lightgrey;
+}
+.list-inline {
+	color: #337eb7;
+	margin-left: -45px;
+		li {
+		display: inline;
+		padding: 5px;
+		}
+}
+.list-unstyled{
+	text-decoration: none;
 }
