--- a/public/stylesheets/shoestring.css
+++ b/public/stylesheets/shoestring.css
@@ -309,7 +309,6 @@ table {
 /* 
 Custom CSS for...
 'Modern Business' HTML Theme by Start Bootstrap
-
 All Start Bootstrap themes are licensed under Apache 2.0. 
 For more info and more free Bootstrap 3 HTML themes, visit http://startbootstrap.com!
 */
@@ -407,4 +406,195 @@ footer {
     /* increases the carousel height so it looks good on phones */ } }
 
 body h1 {
-  color: white; }
+  color: grey; }
+
+.navbar {
+  height: 50px;
+  margin-top: 0px;
+  width: 100%; }
+  .navbar a {
+    text-decoration: none;
+    display: inline;
+    height: 100%;
+    font-size: 18px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    /* new */ }
+
+.navbar-inverse {
+  background: #1A1A1A; }
+  .navbar-inverse a {
+    color: gray; }
+
+.navbar-fixed-top {
+  position: fixed;
+  margin-top: -50px; }
+
+.navbar-header {
+  margin-top: 12px; }
+
+.navbar-brand {
+  float: left; }
+
+.nav {
+  margin-top: 0px;
+  /* new */ }
+
+.navbar-right {
+  float: right; }
+  .navbar-right li {
+    display: inline-block; }
+    .navbar-right li a {
+      padding-left: 40px;
+      /* new */ }
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+  /* new */
+  clear: both; }
+
+.row {
+  clear: both; }
+
+.jumbotron {
+  margin-top: -50px;
+  /* new */ }
+
+.img-responsive {
+  width: 100%;
+  /* new */
+  height: 300px; }
+
+.img-home-portfolio {
+  width: 100%;
+  /* new */
+  height: 100%;
+  margin-bottom: -5px; }
+
+.col-lg-4 {
+  width: 29%;
+  margin: 1.75%;
+  display: inline-block;
+  border: 1px solid lightgrey;
+  vertical-align: top; }
+
+.col-lg-6 {
+  width: 45%;
+  margin: 1.75%;
+  display: inline-block;
+  vertical-align: top; }
+
+.col-sm-8 {
+  width: 62%;
+  margin: 1.75%;
+  display: inline-block;
+  vertical-align: top; }
+
+.col-sm-4 {
+  width: 29%;
+  margin: 1.75%;
+  display: inline-block;
+  vertical-align: top; }
+
+.col-lg-12 {
+  width: 95%;
+  margin: 1.75%;
+  display: inline-block;
+  vertical-align: top; }
+
+.panel-heading {
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 1px;
+  background: #f5f5f5;
+  border-bottom: 1px solid lightgrey;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; }
+  .panel-heading h3 {
+    font-weight: 500; }
+
+.panel-body p {
+  padding: 5%;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
+  margin-top: 0px; }
+
+.panel-title {
+  width: 95%;
+  margin: 1.75%;
+  margin-top: -70px;
+  color: #1A1A1A;
+  padding-bottom: 10px;
+  border-bottom: 1px solid lightgrey;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 36px;
+  font-weight: 500;
+  margin-bottom: 5px; }
+
+.btn {
+  border-radius: 4px;
+  font-family: Arial;
+  color: #2e2d2e;
+  font-size: 14px;
+  background: white;
+  padding: 8px;
+  border: solid lightgrey 1px;
+  text-decoration: none;
+  margin-left: 5%;
+  margin-bottom: 5%; }
+
+.btn:hover {
+  background: lightgrey;
+  border-color: grey;
+  text-decoration: none; }
+
+.portfolio-title {
+  width: 95%;
+  margin: 1.75%;
+  color: #1A1A1A;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #f5f5f5;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 32px;
+  font-weight: 500;
+  margin-bottom: 5px; }
+
+.breadcrumb {
+  background: #f5f5f5;
+  padding: 10px; }
+  .breadcrumb li {
+    display: inline; }
+    .breadcrumb li a {
+      text-decoration: none; }
+
+.form-group {
+  border: none; }
+  .form-group label {
+    line-height: 1.5;
+    font-weight: 700; }
+  .form-group textarea {
+    width: 100%; }
+  .form-group .btn {
+    margin-left: 0px;
+    background-color: #337eb7;
+    color: white;
+    border-color: #2e6da4; }
+  .form-group .btn:hover {
+    background-color: #2e6da4;
+    border-color: #2e6da4; }
+
+.form-control {
+  border-radius: 3px;
+  box-shadow: 0px;
+  border: 1px solid lightgrey; }
+
+.list-inline {
+  color: #337eb7;
+  margin-left: -45px; }
+  .list-inline li {
+    display: inline;
+    padding: 5px; }
+
+.list-unstyled {
+  text-decoration: none; }
