--- a/views/contact.html
+++ b/views/contact.html
@@ -8,10 +8,10 @@
       <div class="row">
       
         <div class="col-lg-12">
-          <h1 class="page-header">Contact <small>We'd Love to Hear From You!</small></h1>
+          <h1 class="portfolio-title">Contact <small>We'd Love to Hear From You!</small></h1>
           <ol class="breadcrumb">
             <li><a href="/">Home</a></li>
-            <li class="active">Contact</li>
+            <li class="active"> / Contact</li>
           </ol>
         </div>
         
@@ -76,4 +76,3 @@
 
     </div><!-- /.container -->
 {% endblock %}
-
