--- a/public/stylesheets/shoestring.css
+++ b/public/stylesheets/shoestring.css
@@ -309,6 +309,7 @@ table {
 /* 
 Custom CSS for...
 'Modern Business' HTML Theme by Start Bootstrap
+
 All Start Bootstrap themes are licensed under Apache 2.0. 
 For more info and more free Bootstrap 3 HTML themes, visit http://startbootstrap.com!
 */
@@ -408,6 +409,9 @@ footer {
 body h1 {
   color: grey; }
 
+.fa {
+  transform: none; }
+
 .navbar {
   height: 50px;
   margin-top: 0px;
@@ -454,7 +458,9 @@ body h1 {
   /* new */
   clear: both; }
 
-.row {
+.row::before, .row::after {
+  content: '';
+  display: block;
   clear: both; }
 
 .jumbotron {
