--- a/assets/stylesheets/shoestring.scss
+++ b/assets/stylesheets/shoestring.scss
@@ -1,7 +1,16 @@
 @import "normalize";
 @import "modern-business";
+
 $darkgrey: #1A1A1A;
 $lightergrey: #f5f5f5;
+
+@mixin clearfix(){
+	&::before, &::after{
+		content: '';
+		display: block;
+		clear: both;
+	};
+}
 
 body {
   h1 {
@@ -58,13 +67,7 @@ body {
   width: 95%; /* new */
   clear: both;
 }
-@mixin clearfix(){
-	&::before, &::after{
-		content: '';
-		display: block;
-		clear: both;
-	};
-}
+
 .row {
   @include clearfix();
 }
@@ -81,53 +84,22 @@ body {
 	margin-bottom: -5px;
 }
 
-@function columns($columns){
-	@return floor(percentage($columns/12))
-}
 
-.col-lg-4 {
-  width: columns(3.5);
-  margin: 1.75%;
-  display: inline-block;
-  border: 1px solid lightgrey;
-  vertical-align: top;
-}
-.col-lg-6 {
-  width: columns(5.5);
-  margin: 1.75%;
-  display: inline-block;
-  vertical-align: top;
-}
-.col-sm-8 {
-  width: columns(7.5);
-  margin: 1.75%;
-  display: inline-block;
-  vertical-align: top;
-}
-.col-sm-4 {
-  width: columns(3.5);
-  margin: 1.75%;
-  display: inline-block;
-  vertical-align: top;
-}
-.col-lg-12 {
-  width: columns(11.5);
-  margin: 1.75%;
-  display: inline-block;
-  vertical-align: top;
-}
 .panel-heading {
-	padding-left: 15px;
-	padding-right: 15px;
+	border: 1px solid lightgrey;
+	padding-left: 2%;
+	padding-right: 2%;
 	padding-top: 1px;
+	padding-bottom: 1px;
 	background: $lightergrey;
-	border-bottom: 1px solid lightgrey;
+	border-bottom: none;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	h3{
 		font-weight: 500;
 	}
 }
 .panel-body {
+	border: 1px solid lightgrey;
 	p{
 		padding: 5%;
 		font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -138,7 +110,7 @@ body {
 }
 .panel-title {
 	width: 95%;
-	margin: 1.75%;
+	margin: 1%;
 	margin-top: -70px;
 	color: $darkgrey;
 	padding-bottom: 10px;
@@ -168,10 +140,11 @@ body {
 }
 .portfolio-title {
 	width: 95%;
-	margin: 1.75%;
+	margin: 1%;
 	color: $darkgrey;
 	padding-bottom: 10px;
-	border-bottom: 1px solid $lightergrey;
+	border: none;
+	border-bottom: 1px solid lightgrey;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 32px;
 	font-weight: 500;
@@ -224,3 +197,4 @@ body {
 	text-decoration: none;
 }
 
+@import 'media-queries';
