--- a/views/home.html
+++ b/views/home.html
@@ -5,12 +5,13 @@
       <!--<div class="container">-->
       <div>
         <div class="row">
-          <div class="jumbotron">
+          <div class="jumbotron"> <!-- took out "col-lg-12 col-md-12 col-sm-12" -->
             <img src="http://placehold.it/1140x450" class="img-responsive">
           </div>
         </div><!-- row -->
       </div><!-- container -->
     </div><!-- section -->
+
 
     <div class="section">
 
@@ -18,29 +19,29 @@
         <h1 class="panel-title">Welcome to Modern Business</h1>
 
         <div class="row">
-          <div class="col-lg-4 ">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <div class='panel-heading'>
-              <h3><i class="fa fa-check-circle-o"></i> Bootstrap 3 Built</h3>
+              <h3><i class="icon-ok-circle"></i> Bootstrap 3 Built</h3>
             </div>
-            <div class="panel-body">
+            <div class='panel-body'>
               <p>The 'Modern Business' website template by <a href="http://startbootstrap.com">Start Bootstrap</a> is built with <a href="http://getbootstrap.com">Bootstrap 3</a>. Make sure you're up to date with latest Bootstrap documentation!</p>
               <button class='btn'>Learn More</button>
             </div>
           </div>
-          <div class="col-lg-4 ">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <div class='panel-heading'>
-              <h3><i class="fa fa-pencil"></i> Ready to Style &amp; Edit</h3>
+              <h3><i class="icon-pencil"></i> Ready to Style &amp; Edit</h3>
             </div>
-            <div class="panel-body">
+            <div class='panel-body'>
               <p>You're ready to go with this pre-built page structure, now all you need to do is add your own custom stylings! You can see some free themes over at <a href="http://bootswatch.com">Bootswatch</a>, or come up with your own using <a href="http://getbootstrap.com/customize/">the Bootstrap customizer</a>!</p>
               <button class='btn'>Learn More</button>
             </div>
           </div>
-          <div class="col-lg-4 ">
+          <div class="col-lg-4 col-md-12 col-sm-12">
             <div class='panel-heading'>
-              <h3><i class="fa fa-folder-open"></i> Many Page Options</h3>
+              <h3><i class="icon-folder-open-alt"></i> Many Page Options</h3>
             </div>
-            <div class="panel-body">
+            <div class='panel-body'>
               <p>This template features many common pages that you might see on a business website. Pages include: about, contact, portfolio variations, blog, pricing, FAQ, 404, services, and general multi-purpose pages.</p>
               <button class='btn'>Learn More</button>
             </div>
@@ -56,7 +57,7 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 col-md-12 col-sm-12">
             <h2>Modern Business: A Clean &amp; Simple Full Website Template by Start Bootstrap</h2>
             <p>A complete website design featuring various single page templates from Start Bootstraps library of free HTML starter templates.</p>
             <hr>
@@ -72,25 +73,26 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-12 text-center">
+          <div class="text-center">
             <h2 class="portfolio-title">Home Page Portfolio</h2>
+            <!-- <hr> -->
           </div>
-          <div class="col-lg-4  ">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <a href="portfolio-item.html"><img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450"></a>
           </div>
-          <div class="col-lg-4  ">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <a href="portfolio-item.html"><img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450"></a>
           </div>
-          <div class="col-lg-4  ">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <a href="portfolio-item.html"><img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450"></a>
           </div>
-          <div class="col-lg-4  ">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <a href="portfolio-item.html"><img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450"></a>
           </div>
-          <div class="col-lg-4  ">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <a href="portfolio-item.html"><img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450"></a>
           </div>
-          <div class="col-lg-4  ">
+          <div class="col-lg-4 col-md-6 col-sm-12">
             <a href="portfolio-item.html"><img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450"></a>
           </div>
         </div><!-- /.row -->
@@ -104,7 +106,7 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6 col-sm-12">
             <h2>Modern Business Features Include:</h2>
             <ul>
               <li>Bootstrap 3 Framework</li>
@@ -118,7 +120,7 @@
               <li>Open Source: Use for any project, private or commercial!</li>
             </ul>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6 col-sm-12">
             <img class="img-responsive" src="http://placehold.it/700x450/ffffff/cccccc">
           </div>
         </div><!-- /.row -->
@@ -132,10 +134,10 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-6  ">
+          <div class="col-lg-6 col-md-6 col-sm-12">
             <img class="img-responsive" src="http://placehold.it/700x450">
           </div>
-          <div class="col-lg-6  ">
+          <div class="col-lg-6 col-md-6 col-sm-12">
             <h2>Modern Business Features Include:</h2>
             <ul>
               <li>Bootstrap 3 Framework</li>
